sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var lgr=getNombreValeurs()
  var ecart=lgr
  var i=0
  var n=1
  while (ecart>1 || n!=0 ){
    n=0
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    if (ecart == 9 || ecart == 10){
      ecart=11
    }
    i=0
    while (i+ecart<lgr){
      if (plusPetit(i+ecart,i)){
        echange(i,i+ecart)
        n+=1
      }
      i+=1
    }
  }
}
}